tests/3d_array.stderr
error: Expected a 2d array
 --> $DIR/3d_array.rs:5:38
  |
5 |     let _x = matrix!([[1, 2, 3], [4, [5], 6], [7, 8, 9]]);
  |                                      ^^^
